<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_performance</name>
  <version>1.0.0</version>
  <description>Test ROS performance</description>
  <maintainer email="abc@def.ghi">abc</maintainer>
  <license>as-is</license>
  <author></author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rmw_fastrtps_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
